editando swagger e JWT
